--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -3,42 +3,41 @@ name: Build all
 on:
   push:
     branches:
-     - main
-     - release/*
+      - main
+      - release/*
     paths:
-     - 'deps/**'
-     - 'src/**'
-     - '**/CMakeLists.txt'
-     - 'version.inc'
-     - 'localization/**'
-     - 'resources/**'
-     - ".github/workflows/build_*.yml"
+      - "deps/**"
+      - "src/**"
+      - "**/CMakeLists.txt"
+      - "version.inc"
+      - "localization/**"
+      - "resources/**"
+      - ".github/workflows/build_*.yml"
 
   pull_request:
     branches:
-     - main
-     - release/*
+      - main
+      - release/*
     paths:
-     - 'deps/**'
-     - 'src/**'
-     - '**/CMakeLists.txt'
-     - 'version.inc'
-     - ".github/workflows/build_*.yml"
-     - 'BuildLinux.sh'
-     - 'build_release_vs2022.bat'
-     - 'build_release_macos.sh'
+      - "deps/**"
+      - "src/**"
+      - "**/CMakeLists.txt"
+      - "version.inc"
+      - ".github/workflows/build_*.yml"
+      - "BuildLinux.sh"
+      - "build_release_vs2022.bat"
+      - "build_release_macos.sh"
 
   workflow_dispatch: # allows for manual dispatch
     inputs:
       build-deps-only:
-        description: 'Only build dependencies (bypasses caching)'
+        description: "Only build dependencies (bypasses caching)"
         type: boolean
         default: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
-  
 
 jobs:
   build_all:
@@ -47,10 +46,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-20.04
-          - os: windows-latest
-          - os: macos-14
-            arch: x86_64
           - os: macos-14
             arch: arm64
     uses: ./.github/workflows/build_check_cache.yml
