--- a/.github/workflows/build_deps.yml
+++ b/.github/workflows/build_deps.yml
@@ -28,12 +28,11 @@ jobs:
     env:
       date:
     steps:
-
       # Setup the environment
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          lfs: 'true'
+          lfs: "true"
 
       - name: load cached deps
         uses: actions/cache@v4
@@ -55,51 +54,47 @@ jobs:
         run: echo "date=$(Get-Date -Format 'yyyyMMdd')" | Out-File -Append -FilePath $env:GITHUB_ENV -Encoding utf8
         shell: pwsh
 
-
       # Build Dependencies
       - name: Build on Windows
         if: inputs.os == 'windows-latest'
         working-directory: ${{ github.workspace }}
         run: |
-            choco install strawberryperl
-            mkdir ${{ github.workspace }}/deps/build
-            mkdir ${{ github.workspace }}/deps/build/OrcaSlicer_dep
-            .\build_release_vs2022.bat deps
-            .\build_release_vs2022.bat pack
-            cd ${{ github.workspace }}/deps/build
+          choco install strawberryperl
+          mkdir ${{ github.workspace }}/deps/build
+          mkdir ${{ github.workspace }}/deps/build/OrcaSlicer_dep
+          .\build_release_vs2022.bat deps
+          .\build_release_vs2022.bat pack
+          cd ${{ github.workspace }}/deps/build
 
       - name: Build on Mac ${{ inputs.arch }}
         if: inputs.os == 'macos-14'
         working-directory: ${{ github.workspace }}
         run: |
-            brew install cmake
-            brew install automake texinfo ninja libtool
-            brew list
-            mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
-            mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/OrcaSlicer_dep_${{ inputs.arch }}
-            brew uninstall --ignore-dependencies zstd
-            ./build_release_macos.sh -dpx -a ${{ inputs.arch }} -t 10.15 -1
-            brew install zstd
-
+          brew install cmake@4.0.0 automake@1.16.5 texinfo@7.2 ninja@1.12.1 libtool@2.5.4
+          brew list
+          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
+          mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/OrcaSlicer_dep_${{ inputs.arch }}
+          brew uninstall --ignore-dependencies zstd
+          ./build_release_macos.sh -dpx -a ${{ inputs.arch }} -t 10.15 -1
+          brew install zstd
 
       - name: Build on Ubuntu
         if: inputs.os == 'ubuntu-20.04'
         working-directory: ${{ github.workspace }}
         run: |
-            sudo apt-get update
-            sudo apt-get install -y cmake git g++ build-essential libgl1-mesa-dev m4 \
-            libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules pkgconf \
-            libglu1-mesa-dev libcairo2-dev libgtk-3-dev libsoup2.4-dev libwebkit2gtk-4.0-dev \
-            libgstreamer1.0-dev libgstreamer-plugins-good1.0-dev libgstreamer-plugins-base1.0-dev \
-            gstreamer1.0-plugins-bad libosmesa6-dev wget sudo autoconf curl libunwind-dev texinfo
-            mkdir -p ${{ github.workspace }}/deps/build
-            mkdir -p ${{ github.workspace }}/deps/build/destdir
-            sudo ./BuildLinux.sh -ur
-            sudo chown $USER -R ./
-            ./BuildLinux.sh -dr
-            cd deps/build
-            tar -czvf OrcaSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
-
+          sudo apt-get update
+          sudo apt-get install -y cmake git g++ build-essential libgl1-mesa-dev m4 \
+          libwayland-dev libxkbcommon-dev wayland-protocols extra-cmake-modules pkgconf \
+          libglu1-mesa-dev libcairo2-dev libgtk-3-dev libsoup2.4-dev libwebkit2gtk-4.0-dev \
+          libgstreamer1.0-dev libgstreamer-plugins-good1.0-dev libgstreamer-plugins-base1.0-dev \
+          gstreamer1.0-plugins-bad libosmesa6-dev wget sudo autoconf curl libunwind-dev texinfo
+          mkdir -p ${{ github.workspace }}/deps/build
+          mkdir -p ${{ github.workspace }}/deps/build/destdir
+          sudo ./BuildLinux.sh -ur
+          sudo chown $USER -R ./
+          ./BuildLinux.sh -dr
+          cd deps/build
+          tar -czvf OrcaSlicer_dep_ubuntu_$(date +"%Y%m%d").tar.gz destdir
 
       # Upload Artifacts
       - name: Upload Mac ${{ inputs.arch }} artifacts
