--- a/.github/workflows/build_deps.yml
+++ b/.github/workflows/build_deps.yml
@@ -70,7 +70,7 @@ jobs:
         if: inputs.os == 'macos-14'
         working-directory: ${{ github.workspace }}
         run: |
-          brew install cmake@4.0.0 automake@1.16.5 texinfo@7.2 ninja@1.12.1 libtool@2.5.4
+          brew install cmake automake texinfo ninja libtool
           brew list
           mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}
           mkdir -p ${{ github.workspace }}/deps/build_${{ inputs.arch }}/OrcaSlicer_dep_${{ inputs.arch }}
